syntax = "proto3";

option csharp_namespace = "AElf.OS.Network";

import "google/protobuf/timestamp.proto";
import "aelf/core.proto";
import "kernel.proto";

message Handshake {
    HandshakeData HskData = 1;
    bytes Signature = 2;
    bool Success = 3;
    aelf.BlockHeader Header = 4;
}

message HandshakeData {
    int32 ChainId = 1;
    int32 Version = 2;
    int64 ListeningPort = 3;
    bytes PublicKey = 4;
}

message PeerNewBlockAnnouncement {
    aelf.Hash BlockHash = 1;
    int64 BlockHeight = 2;
    google.protobuf.Timestamp BlockTime = 3;
    bool HasFork = 4;
}

message BlockWithTransactions {
    aelf.BlockHeader Header = 1;
    repeated aelf.Transaction Transactions = 2;
}